@@ -84,11 +84,11 @@ table_sixteen=
 	     "half"	"\hslurchar%{%}"
      }
      "accidentals" = \table {
-	     "-2"	"\flatflat"	0\pt 	10.2\pt	-2.5\pt 7.5\pt
-	     "-1"	"\flat"		0\pt	6\pt	-2.5\pt 7.5\pt
-	     "0"	"\natural"	0\pt	6\pt	-7.5\pt 7.5\pt
-	     "1"	"\sharp"		0\pt	6\pt	-7.5\pt 7.5\pt
-	     "2"	"\sharpsharp"	0\pt	6\pt	-2.5\pt 7.5\pt
+	     "-2"	"\flatflat"	0\pt 	8.16\pt	-2.5\pt 7.5\pt
+	     "-1"	"\flat"		0\pt	4.8\pt	-2.5\pt 7.5\pt
+	     "0"	"\natural"	0\pt	4.8\pt	-7.5\pt 7.5\pt
+	     "1"	"\sharp" 	0\pt	3.6\pt	-7.5\pt 7.5\pt
+	     "2"	"\sharpsharp"	0\pt	4.8\pt	-2.5\pt 7.5\pt
      }
 
      "streepjes" = \table {
