@@ -1,3 +1,6 @@
+%
+% A tex file to help determine dims.
+%
 \font\musicfont=musixsps
 \font\slurfont=xslu16
 \def\thefont{\musicfont}
